--- a/software.html
+++ b/software.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>公元1998年 - 一元市网络论坛 - 软件下载</title>
     <style>
-        /* 1998年风格CSS (保持与之前一致) */
+        /* 1998年风格CSS */
         body {
             font-family: "宋体", "KaiTi", serif;
             background-color: #E0E0E0;
@@ -232,13 +232,11 @@
 
                 <br>
                 <h3>本地商家推荐</h3>
-                <!-- 六毛啤酒屋广告 -->
                 <div class="ad-block-sidebar">
                     <h4>六毛啤酒屋</h4>
                     <p>地址：一元市两市区</p>
                     <p>凉爽夏日，啤酒烤串好去处！</p>
                 </div>
-                <!-- 法自然斋广告 -->
                 <div class="ad-block-sidebar">
                     <h4>法自然斋</h4>
                     <p><strong>知天命，改运势，助您人生顺遂！</strong></p>
@@ -247,14 +245,12 @@
                     <p>预约电话：(010) 66668888</p>
                     <p>地址：一元市平安路88号</p>
                 </div>
-                <!-- 电脑维修与组装广告 -->
                 <div class="ad-block-sidebar">
                     <h4>电脑维修与组装</h4>
                     <p>您的电脑卡慢？系统崩溃？专业维修，硬件升级，组装配置！</p>
                     <p><strong>一元市电子城B座101</strong></p>
                     <p>电话：(010) 77776666</p>
                 </div>
-                <!-- 新起点外语培训广告 -->
                 <div class="ad-block-sidebar">
                     <h4>新起点外语培训</h4>
                     <p>学外语，走向世界！</p>
@@ -264,7 +260,6 @@
                 </div>
 
                 <br>
-                <!-- 招聘广告摘要 (在侧边栏) -->
                 <div class="recruitment-ad">
                     <h3>【招聘启事】</h3>
                     <p align="center">一元市电视台为<br>《拥抱科学》节目<br>招募外包员工！</p>
