--- a/forum.html
+++ b/forum.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>公元1998年 - 一元市网络论坛 - 论坛区总览</title>
     <style>
-        /* 1998年风格CSS (保持与之前一致) */
+        /* 1998年风格CSS */
         body {
             font-family: "宋体", "KaiTi", serif;
             background-color: #E0E0E0;
@@ -251,13 +251,11 @@
 
                 <br>
                 <h3>本地商家推荐</h3>
-                <!-- 六毛啤酒屋广告 -->
                 <div class="ad-block-sidebar">
                     <h4>六毛啤酒屋</h4>
                     <p>地址：一元市两市区</p>
                     <p>凉爽夏日，啤酒烤串好去处！</p>
                 </div>
-                <!-- 法自然斋广告 -->
                 <div class="ad-block-sidebar">
                     <h4>法自然斋</h4>
                     <p><strong>知天命，改运势，助您人生顺遂！</strong></p>
@@ -266,14 +264,12 @@
                     <p>预约电话：(010) 66668888</p>
                     <p>地址：一元市平安路88号</p>
                 </div>
-                <!-- 电脑维修与组装广告 -->
                 <div class="ad-block-sidebar">
                     <h4>电脑维修与组装</h4>
                     <p>您的电脑卡慢？系统崩溃？专业维修，硬件升级，组装配置！</p>
                     <p><strong>一元市电子城B座101</strong></p>
                     <p>电话：(010) 77776666</p>
                 </div>
-                <!-- 新起点外语培训广告 -->
                 <div class="ad-block-sidebar">
                     <h4>新起点外语培训</h4>
                     <p>学外语，走向世界！</p>
@@ -283,7 +279,6 @@
                 </div>
 
                 <br>
-                <!-- 招聘广告摘要 (在侧边栏) -->
                 <div class="recruitment-ad">
                     <h3>【招聘启事】</h3>
                     <p align="center">一元市电视台为<br>《拥抱科学》节目<br>招募外包员工！</p>
@@ -301,9 +296,29 @@
                     <p align="right"><small>回复：350 | 最后回复：1998-03-02</small></p>
                 </div>
                 <div class="topic-item">
+                    <h4>求助：如何用调制解调器拨号上网？详细教程！</h4>
+                    <p>（楼主：上网小白）刚买了个28.8K猫，线都接好了，但就是拨不上号！是不是还要安装什么驱动？求高手在线指导！</p>
+                    <p align="right"><small>回复：210 | 最后回复：1998-03-01</small></p>
+                </div>
+                <div class="topic-item">
+                    <h4>讨论：您心中最经典的DOS游戏是哪一款？</h4>
+                    <p>（楼主：骨灰级玩家）《仙剑》、《金庸群侠传》、《毁灭战士》…太多回忆了！大家来说说自己最爱的DOS游戏，以及当年的趣事！</p>
+                    <p align="right"><small>回复：180 | 最后回复：1998-02-28</small></p>
+                </div>
+                <div class="topic-item">
                     <h4>讨论：Windows 98即将发布，您最期待哪些新功能？</h4>
                     <p>（楼主：微软粉丝）听说Windows 98很快就要和大家见面了，新的IE浏览器，更好的USB支持…大家最期待哪些改进？</p>
                     <p align="right"><small>回复：280 | 最后回复：1998-02-25</small></p>
+                </div>
+                <div class="topic-item">
+                    <h4>分享：我的第一台电脑配置清单！</h4>
+                    <p>（楼主：硬件发烧友）晒晒我的486DX4 100MHz，16MB内存，1GB硬盘，配了个14寸CRT显示器，当年可是花了血本啊！</p>
+                    <p align="right"><small>回复：150 | 最后回复：1998-02-25</small></p>
+                </div>
+                <div class="topic-item">
+                    <h4>求助：在哪能买到正版游戏光盘？</h4>
+                    <p>（楼主：支持正版）除了电脑城，还有其他渠道吗？网上有没有代购的？</p>
+                    <p align="right"><small>回复：98 | 最后回复：1998-02-23</small></p>
                 </div>
                 <div class="topic-item">
                     <h4>求助：哪款显卡玩《星际争霸》最流畅？</h4>
