--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>公元1998年 - 一元市网络论坛 - 新闻中心</title>
     <style>
-        /* 1998年风格CSS (保持与之前一致) */
+        /* 1998年风格CSS */
         body {
             font-family: "宋体", "KaiTi", serif;
             background-color: #E0E0E0;
@@ -251,13 +251,11 @@
 
                 <br>
                 <h3>本地商家推荐</h3>
-                <!-- 六毛啤酒屋广告 -->
                 <div class="ad-block-sidebar">
                     <h4>六毛啤酒屋</h4>
                     <p>地址：一元市两市区</p>
                     <p>凉爽夏日，啤酒烤串好去处！</p>
                 </div>
-                <!-- 法自然斋广告 -->
                 <div class="ad-block-sidebar">
                     <h4>法自然斋</h4>
                     <p><strong>知天命，改运势，助您人生顺遂！</strong></p>
@@ -266,14 +264,12 @@
                     <p>预约电话：(010) 66668888</p>
                     <p>地址：一元市平安路88号</p>
                 </div>
-                <!-- 电脑维修与组装广告 -->
                 <div class="ad-block-sidebar">
                     <h4>电脑维修与组装</h4>
                     <p>您的电脑卡慢？系统崩溃？专业维修，硬件升级，组装配置！</p>
                     <p><strong>一元市电子城B座101</strong></p>
                     <p>电话：(010) 77776666</p>
                 </div>
-                <!-- 新起点外语培训广告 -->
                 <div class="ad-block-sidebar">
                     <h4>新起点外语培训</h4>
                     <p>学外语，走向世界！</p>
@@ -283,7 +279,6 @@
                 </div>
 
                 <br>
-                <!-- 招聘广告摘要 (在侧边栏) -->
                 <div class="recruitment-ad">
                     <h3>【招聘启事】</h3>
                     <p align="center">一元市电视台为<br>《拥抱科学》节目<br>招募外包员工！</p>
@@ -305,9 +300,19 @@
                     <p align="right"><small>发布日期：1998年3月1日</small></p>
                 </div>
                 <div class="news-item">
+                    <h4>国际互联网联盟（W3C）发布XML 1.0 标准</h4>
+                    <p>万维网联盟今日正式发布了可扩展标记语言（XML）1.0标准，这将为未来的网络数据交换和信息组织提供更灵活强大的基础，预示着互联网应用的下一个飞跃。</p>
+                    <p align="right"><small>发布日期：1998年2月26日</small></p>
+                </div>
+                <div class="news-item">
                     <h4>回顾：香港回归祖国，举国欢庆！</h4>
                     <p>自1997年7月1日香港回归以来，特区政府运作平稳，经济持续发展，社会各界积极参与建设，紫荆花在香江盛放！</p>
                     <p align="right"><small>发布日期：1998年2月25日</small></p>
+                </div>
+                <div class="news-item">
+                    <h4>新一代奔腾II处理器上市，性能大幅提升！</h4>
+                    <p>英特尔公司最新款奔腾II处理器正式发布，其卓越的性能将为个人电脑带来前所未有的处理速度，游戏和多媒体体验将得到极大改善。</p>
+                    <p align="right"><small>发布日期：1998年2月20日</small></p>
                 </div>
                 <div class="news-item">
                     <h4>中国互联网用户数量突破100万！</h4>
